<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <ss.com.bannerslider.Slider
        android:id="@+id/bannerSlider"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:slider_interval="8000"
        app:slider_loopSlides="true"
        app:slider_animateIndicators="true"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/item_background"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tat_ca_phim"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tat_ca_phim_description"
                        android:textSize="14sp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/btnTatCa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    android:text="@string/them"
                    android:textColor="@color/btnThem"
                    />
            </RelativeLayout>
            <org.lucasr.twowayview.TwoWayView
                android:id="@+id/lsvListAllMovies"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:orientation="horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/item_background"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phim_h_nh_ng"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/c_c_b_phim_h_nh_ng_c_a_th_ch_nh_t"
                        android:textSize="14sp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/btnLinear1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    android:text="@string/them"
                    android:textColor="@color/btnThem"
                    />
            </RelativeLayout>
            <org.lucasr.twowayview.TwoWayView
                android:id="@+id/lsvListMovies"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:orientation="horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/item_background"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phim_khoa_hoc_vien_tuong"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_phim_khoa_hoc_vien_tuong"
                        android:textSize="14sp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/btnLinear2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    android:text="@string/them"
                    android:textColor="@color/btnThem"
                    />
            </RelativeLayout>
            <org.lucasr.twowayview.TwoWayView
                android:id="@+id/lsvListMovies2"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:orientation="horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/item_background"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phim_kinh_di"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desciption_phim_kinh_di"
                        android:textSize="14sp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/btnLinear3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    android:text="@string/them"
                    android:textColor="@color/btnThem"
                    />
            </RelativeLayout>
            <org.lucasr.twowayview.TwoWayView
                android:id="@+id/lsvListMovies3"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:orientation="horizontal"
                />
        </LinearLayout>
        </LinearLayout>
</ScrollView>

